# mpi_lab4_1

./: CMakeLists.txt  main.cpp
